# hexcell-rust

./: LICENSE  README.md
hexcell_api/: Cargo.toml
hexcell_api/src/: display.rs  errors.rs  hexapi_errors.rs  hexcell.rs  lib.rs  logging.rs  messaging.rs  timer.rs
hexcell_bsp/: Cargo.toml  memory.x  openocd.cfg
hexcell_bsp/src/: stm32f103.rs
hexcell_core/: Cargo.toml
hexcell_core/src/: hexcore.rs  hexcore_errors.rs  lib.rs  networking.rs  patterns.rs  ports.rs  scheduler.rs
hexcell_sim/: Cargo.toml
hexcell_sim/src/: hexcell_sim.rs  main.rs  renderer.rs
