[package]
name = "hexcell_api"
version = "0.1.0"
edition = "2021"
authors = ["Austen Bartels"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-error-chain = "1.0.0"
heapless = "0.7.16"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"

[lib]
name="hexcell_api"
crate-type=["lib"]
bench = false
test = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
