[package]
authors = ["danger"]
edition = "2018"
readme = "README.md"
name = "hexcell_bsp"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
heapless = "0.7.16"
panic-halt = "0.2.0"

[dependencies.stm32f1]
features = ["stm32f103", "rt"]
version = "0.7.1"

[[bin]]
name = "stm32f103"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
